# discord-tod-bot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
commands/: add.cpp  dare.cpp  random.cpp  truth.cpp
utils/: json_store.cpp  json_store.h
